Fix footer height constraint and container overflow issues
- Set footer min-height to 500px to ensure full content visibility
- Fix footer container overflow beyond footer boundaries
- Move acknowledgement section back outside footer (before footer tag)
- Ensure footer container respects viewport width with max-width: min(2138px, 100%)
- Add overflow constraints to prevent horizontal scrolling
- Update footer CSS for proper height expansion (height: auto, max-height: none)
- Add specific rules for footer class combinations (footer.bg-dark, footer.py-3)

--- a/contact.html
+++ b/contact.html
@@ -325,7 +325,7 @@
                 <!-- All Links on Left -->
                 <div class="col-6 footer-column">
             <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <h5>Bloom'n</h5>
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
@@ -334,7 +334,7 @@
                                 <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
                     </ul>
                 </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <h5>Portfolio</h5>
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
@@ -343,7 +343,17 @@
                                 <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
                     </ul>
                 </div>
-                        <div class="col-4">
+                        <div class="col-3">
+                            <h5>Success Stories</h5>
+                            <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                    </ul>
+                </div>
+                        <div class="col-3">
                             <h5>Policies</h5>
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="tandcs.html">Terms & Conditions</a></li>
