--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Bloom'n Events Co | Professional Event Planning & Displays">
     <meta property="og:description" content="Professional event planning & displays in Brookton, WA. Corporate events, workshops, custom displays. Transform your vision into unforgettable experiences with Bloom'n Events Co.">
-    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/assets/images/logo-wht.png">
     <meta property="og:url" content="https://www.bloomneventsco.com.au/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bloom'n Events Co | Professional Event Planning & Displays">
     <meta name="twitter:description" content="Professional event planning & displays in Brookton, WA. Corporate events, workshops, custom displays. Transform your vision into unforgettable experiences.">
-    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/assets/images/logo-wht.png">
     <meta name="twitter:site" content="@bloomneventsco">
     <meta name="twitter:creator" content="@bloomneventsco">
     
@@ -106,8 +106,8 @@
         "@id": "https://www.bloomneventsco.com.au/#organization",
         "name": "Bloom'n Events Co Pty Ltd",
         "url": "https://www.bloomneventsco.com.au/",
-        "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png",
-        "image": "https://www.bloomneventsco.com.au/images/logo-wht.png",
+        "logo": "https://www.bloomneventsco.com.au/assets/images/logo-wht.png",
+        "image": "https://www.bloomneventsco.com.au/assets/images/logo-wht.png",
         "description": "Professional event planning and custom displays in Brookton, WA. Corporate events, creative workshops, and bespoke installations across Perth and Western Australia.",
         "address": {
             "@type": "PostalAddress",
@@ -413,7 +413,7 @@
         <!-- HERO SECTION -->
         <section class="hero-section" aria-label="Hero">
             <div class="hero-background">
-                <video class="hero-video" autoplay muted loop playsinline preload="none" poster="images/logo-wht.png" width="1920" height="1080" aria-label="Bloom'n Events Co event production showcase video">
+                <video class="hero-video" autoplay muted loop playsinline preload="none" poster="assets/images/logo-wht.png" width="1920" height="1080" aria-label="Bloom'n Events Co event production showcase video">
                     <source src="assets/images/bloomn-hero.mp4" type="video/mp4">
                 </video>
                 <div class="hero-overlay"></div>
@@ -616,12 +616,12 @@
             </div>
         </section>
 
-        <!-- CASE STUDIES SECTION -->
+        <!-- SUCCESS STORIES SECTION -->
         <section class="section-main" aria-labelledby="caseStudiesHeading">
             <div class="container">
                 <h2 id="caseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Success Stories</h2>
                 <div class="success-stories-carousel-wrapper">
-                    <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous case study" type="button">
+                    <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous success story" type="button">
                         <i class="bi bi-chevron-left"></i>
                     </button>
                     <div class="success-stories-carousel-container">
@@ -646,7 +646,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                         <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
-                                        <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -670,7 +670,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                         <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
-                                        <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -694,7 +694,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
                                         <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
-                                        <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -718,7 +718,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
                                         <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
-                                        <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -742,13 +742,13 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
                                         <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
-                                        <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next case study" type="button">
+                    <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next success story" type="button">
                         <i class="bi bi-chevron-right"></i>
                     </button>
                 </div>
@@ -859,7 +859,7 @@
         </div>
     </div>
 
-        <!-- PRE-FOOTER CTA -->
+        <!-- PRE-FOOTER CTA / ACKNOWLEDGEMENT -->
         <section class="section-main" aria-labelledby="preFooterCtaHeading">
             <div class="container">
                 <div class="heading-blush-bg text-center">
@@ -872,25 +872,53 @@
         <div class="container py-2 px-sm-0">
             <div class="row align-items-center">
                 <!-- All Links on Left -->
-                <div class="col-6 footer-column">
+                <div class="col-9 footer-column">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-4 footer-accordion-column">
                             <h5>Bloom'n</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
-                            </ul>
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                                <span>Bloom'n</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                                <ul class="nav d-flex flex-column row-gap-0">
+                                    <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-4 footer-accordion-column">
                             <h5>Portfolio</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
-                                <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
-                                <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
-                            </ul>
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                                <span>Portfolio</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                                <ul class="nav d-flex flex-column row-gap-0">
+                                    <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-4 footer-accordion-column">
+                            <h5>Success Stories</h5>
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                                <span>Success Stories</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-success">
+                                <ul class="nav d-flex flex-column row-gap-0">
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                    <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -900,8 +928,11 @@
                     <a href="index.html" aria-label="Home">
                         <img src="assets/images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
                     </a>
+                    <p class="text-gold fw-light small mb-1">
+                        <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>
+                    </p>
                     <p class="text-gold fw-light small mb-0">
-                        <a href="tandcs.html" class="text-gold text-decoration-none">Terms & Conditions</a>  |  <a href="policies.html" class="text-gold text-decoration-none">Company Policies</a>  |  Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
+                        Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
                     </p>
                 </div>
                 
