--- a/about.html
+++ b/about.html
@@ -642,26 +642,54 @@
                 <div class="container py-2 px-sm-0">
                     <div class="row align-items-center">
                         <!-- All Links on Left -->
-                        <div class="col-6 footer-column">
+                        <div class="col-9 footer-column">
             <div class="row">
-                                <div class="col-4">
+                                <div class="col-4 footer-accordion-column">
                                     <h5>Bloom'n</h5>
-                                    <ul class="nav d-flex flex-column row-gap-0">
-                                        <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
-                    </ul>
-                </div>
-                                <div class="col-4">
+                                    <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                                        <span>Bloom'n</span>
+                                        <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                                    </button>
+                                    <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                                        <ul class="nav d-flex flex-column row-gap-0">
+                                            <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-4 footer-accordion-column">
                                     <h5>Portfolio</h5>
-                                    <ul class="nav d-flex flex-column row-gap-0">
-                                        <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
-                                        <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
-                    </ul>
-                </div>
+                                    <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                                        <span>Portfolio</span>
+                                        <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                                    </button>
+                                    <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                                        <ul class="nav d-flex flex-column row-gap-0">
+                                            <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-4 footer-accordion-column">
+                                    <h5>Success Stories</h5>
+                                    <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                                        <span>Success Stories</span>
+                                        <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                                    </button>
+                                    <div class="footer-accordion-content" id="footer-accordion-success">
+                                        <ul class="nav d-flex flex-column row-gap-0">
+                                            <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                            <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                                 <div class="col-4">
                                     <h5>Policies</h5>
                                     <ul class="nav d-flex flex-column row-gap-0">
