--- a/gallery.html
+++ b/gallery.html
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/images/Centuria%20Connect140/Connect140%20(2).JPG" class="d-block w-100" alt="Centuria Connect140 Stage View" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw" srcset="assets/images/Centuria%20Connect140/Connect140%20(2)-480w.JPG 480w, assets/images/Centuria%20Connect140/Connect140%20(2)-768w.JPG 768w, assets/images/Centuria%20Connect140/Connect140%20(2)-1200w.JPG 1200w, assets/images/Centuria%20Connect140/Connect140%20(2)-1600w.JPG 1600w">
+                                <img src="assets/images/Centuria Connect140/Connect140 (2).jpg" class="d-block w-100" alt="Centuria Connect140 Stage View" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw" srcset="assets/images/Centuria Connect140/Connect140 (2)-480w.JPG 480w, assets/images/Centuria Connect140/Connect140 (2)-768w.JPG 768w, assets/images/Centuria Connect140/Connect140 (2)-1200w.JPG 1200w, assets/images/Centuria Connect140/Connect140 (2)-1600w.JPG 1600w">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Centuria Connect140 Stage View</h5>
                                 </div>
@@ -472,12 +472,12 @@
         </div>
     </section>
     
-    <!-- Case Studies Section -->
+    <!-- Success Stories Section -->
     <section class="section-main" aria-labelledby="case-studies-heading">
         <div class="container">
-            <h2 id="case-studies-heading" class="display-4 text-center heading-blush-bg content-heading-large mb-5">Case Studies</h2>
+            <h2 id="case-studies-heading" class="display-4 text-center heading-blush-bg content-heading-large mb-5">Success Stories</h2>
             <div class="success-stories-carousel-wrapper">
-                <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous case study" type="button">
+                <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous success story" type="button">
                     <i class="bi bi-chevron-left"></i>
                 </button>
                 <div class="success-stories-carousel-container">
@@ -502,7 +502,7 @@
                                 <div class="card-body text-center">
                                     <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                     <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
-                                    <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                 </div>
                             </div>
                         </div>
@@ -526,7 +526,7 @@
                                 <div class="card-body text-center">
                                     <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                     <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
-                                    <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                 </div>
                             </div>
                         </div>
@@ -550,7 +550,7 @@
                                 <div class="card-body text-center">
                                     <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
                                     <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
-                                    <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                 </div>
                             </div>
                         </div>
@@ -574,7 +574,7 @@
                                 <div class="card-body text-center">
                                     <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
                                     <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
-                                    <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                 </div>
                             </div>
                         </div>
@@ -598,13 +598,13 @@
                                 <div class="card-body text-center">
                                     <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
                                     <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
-                                    <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next case study" type="button">
+                <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next success story" type="button">
                     <i class="bi bi-chevron-right"></i>
                 </button>
             </div>
@@ -645,32 +645,66 @@
         <div class="container py-2 px-sm-0">
             <div class="row align-items-center">
                 <!-- All Links on Left -->
-                <div class="col-6 footer-column">
-            <div class="row">
-                        <div class="col-4">
+                <div class="col-9 footer-column">
+                    <div class="row">
+                <div class="col-3 footer-accordion-column">
                             <h5>Bloom'n</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                                <span>Bloom'n</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                                <ul class="nav d-flex flex-column row-gap-0">
                         <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
                     </ul>
+                            </div>
                 </div>
-                        <div class="col-4">
+                        <div class="col-3 footer-accordion-column">
                             <h5>Portfolio</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                                <span>Portfolio</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                                <ul class="nav d-flex flex-column row-gap-0">
                         <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
                         <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
                         <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
                     </ul>
+                            </div>
                 </div>
-                        <div class="col-4">
+                        <div class="col-3 footer-accordion-column">
+                            <h5>Success Stories</h5>
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                                <span>Success Stories</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-success">
+                                <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                    </ul>
+                            </div>
+                </div>
+                        <div class="col-3 footer-accordion-column">
                             <h5>Policies</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-policies">
+                                <span>Policies</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-policies">
+                                <ul class="nav d-flex flex-column row-gap-0">
                         <li class="nav-item"><a class="nav-link text-light" href="tandcs.html">Terms & Conditions</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="policies.html">Company Policies</a></li>
                     </ul>
+                            </div>
                 </div>
                         </div>
                         </div>
