--- a/workshops.html
+++ b/workshops.html
@@ -251,7 +251,7 @@
                     <p class="hero-subhead">Hands-on learning experiences that spark creativity, connection, and joy. From school holiday programmes to team building workshops, we deliver engaging activities across Perth and Western Australia.</p>
                     <div class="hero-cta">
                         <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Book a Workshop</a>
-                        <a href="#case-studies" class="btn btn-outline-gold btn-lg mb-3">View Case Studies</a>
+                        <a href="#case-studies" class="btn btn-outline-gold btn-lg mb-3">View Success Stories</a>
                     </div>
                 </div>
             </div>
@@ -433,7 +433,7 @@
                         <div class="card h-100 shadow" style="background-color: var(--coreChampers);">
                             <div class="card-body text-center">
                                 <h3 class="text-gold mb-3">Proven Engagement</h3>
-                                <p class="text-charcoal">Our workshops have successfully driven traffic and dwell time for clients. See our <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="text-gold">Hawaiian Neighbourhood Nibbles case study</a> for results.</p>
+                                <p class="text-charcoal">Our workshops have successfully driven traffic and dwell time for clients. See our <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="text-gold">Hawaiian Neighbourhood Nibbles success story</a> for results.</p>
                             </div>
                         </div>
                     </div>
@@ -560,7 +560,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
                                         <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
-                                        <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -584,7 +584,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
                                         <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
-                                        <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -608,7 +608,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
                                         <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
-                                        <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -632,7 +632,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
                                         <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
-                                        <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -656,7 +656,7 @@
                                     <div class="card-body text-center">
                                         <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
                                         <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
-                                        <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                        <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Success Story</a>
                                     </div>
                                 </div>
                             </div>
@@ -697,32 +697,66 @@
         <div class="container py-2 px-sm-0">
             <div class="row align-items-center">
                 <!-- All Links on Left -->
-                <div class="col-6 footer-column">
+                <div class="col-9 footer-column">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3 footer-accordion-column">
                             <h5>Bloom'n</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                                <span>Bloom'n</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                                <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="team.html">Our Team</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="gallery.html">Gallery</a></li>
                             </ul>
+                            </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3 footer-accordion-column">
                             <h5>Portfolio</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                                <span>Portfolio</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                                <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="displays.html">Displays</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="capabilities.html">Our Capabilities</a></li>
                             </ul>
+                            </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3 footer-accordion-column">
+                            <h5>Success Stories</h5>
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                                <span>Success Stories</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-success">
+                                <ul class="nav d-flex flex-column row-gap-0">
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-neighbourhood-nibbles.html">Neighbourhood Nibbles</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-50th-birthday.html">50th Birthday</a></li>
+                                <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-breast-cancer.html">Breast Cancer Awareness</a></li>
+                            </ul>
+                            </div>
+                        </div>
+                        <div class="col-3 footer-accordion-column">
                             <h5>Policies</h5>
-                            <ul class="nav d-flex flex-column row-gap-0">
+                            <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-policies">
+                                <span>Policies</span>
+                                <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
+                            </button>
+                            <div class="footer-accordion-content" id="footer-accordion-policies">
+                                <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="tandcs.html">Terms & Conditions</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="policies.html">Company Policies</a></li>
                             </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
