Fix footer accordion: Bootstrap Icons font loading, chevron display, and button state styling

--- a/capabilities.html
+++ b/capabilities.html
@@ -50,8 +50,7 @@
     <noscript><link rel="stylesheet" href="assets/css/main.css"></noscript>
 
     <!-- Non-critical CSS with deferred loading -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"></noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <!-- Optimized favicon -->
     <link rel="icon" href="assets/images/logo-wht.png" type="image/png">
@@ -223,7 +222,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-10 text-center">
-                            <h1 class="hero-headline hero-animate-fade-in">Capabilities: Concept. Craft. Code. Connection.</h1>
+                            <h1 class="hero-headline hero-animate-fade-in">Capabilities:<br>Concept. Craft. Code. Connection.</h1>
                             <p class="lead text-light hero-animate-fade-in hero-animate-delay-2 mb-4"><strong>We're not here to decorate—we're here to move people, build awareness, and create connection.</strong></p>
                             <div class="hero-cta hero-animate-fade-in hero-animate-delay-3">
                                 <a href="#introduction" class="btn btn-gold btn-lg me-3 mb-3">Explore Our Capabilities</a>
