--- a/404.html
+++ b/404.html
@@ -50,8 +50,7 @@
     <noscript><link rel="stylesheet" href="assets/css/main.css"></noscript>
 
     <!-- Non-critical CSS with deferred loading -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"></noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <!-- Optimized favicon -->
     <link rel="icon" href="assets/images/logo-wht.png" type="image/png">
