--- a/capabilities.html
+++ b/capabilities.html
@@ -42,18 +42,16 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap"></noscript>
 
     <!-- Critical CSS with optimized loading -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" media="print" onload="this.media='all'">
-    <noscript><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"></noscript>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Preload critical custom CSS -->
-    <link rel="preload" href="assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="assets/css/main.css"></noscript>
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <!-- Non-critical CSS with deferred loading -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <!-- Optimized favicon -->
-    <link rel="icon" href="assets/images/logo-wht.png" type="image/png">
+    <link rel="icon" href="assets/images/butterfly-icon.svg" type="image/svg+xml">
     <link rel="preload" href="assets/images/logo-wht.png" as="image">
     
     <!-- Structured Data for SEO -->
@@ -245,6 +243,10 @@
                     <li class="anchor-nav-item"><a href="#marketingHeading" class="anchor-nav-link">Design</a></li>
                     <li class="anchor-nav-item"><a href="#digitalHeading" class="anchor-nav-link">Digital</a></li>
                     <li class="anchor-nav-item"><a href="#signageHeading" class="anchor-nav-link">Signage</a></li>
+                    <li class="anchor-nav-item"><a href="#mediaHeading" class="anchor-nav-link">Media & Communications</a></li>
+                    <li class="anchor-nav-item"><a href="#partnershipsHeading" class="anchor-nav-link">Partnerships</a></li>
+                    <li class="anchor-nav-item"><a href="#deliveryHeading" class="anchor-nav-link">Project Delivery</a></li>
+                    <li class="anchor-nav-item"><a href="#galleryHeading" class="anchor-nav-link">Our Work</a></li>
                 </ul>
             </div>
         </nav>
