--- a/team.html
+++ b/team.html
@@ -42,18 +42,16 @@
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap"></noscript>
 
     <!-- Critical CSS with optimized loading -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" media="print" onload="this.media='all'" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <noscript><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"></noscript>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
-    <!-- Preload critical custom CSS -->
-    <link rel="preload" href="assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="assets/css/main.css"></noscript>
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <!-- Non-critical CSS with deferred loading -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" integrity="sha384-CK2SzKma4jA5H/MXDUU7i1TqZlCFaD4T01vtyDFvPlD97JQyS+IsSh1nI2EFbpyk" crossorigin="anonymous">
 
     <!-- Optimized favicon -->
-    <link rel="icon" href="assets/images/logo-wht.png" type="image/png">
+    <link rel="icon" href="assets/images/butterfly-icon.svg" type="image/svg+xml">
     <link rel="preload" href="assets/images/logo-wht.png" as="image">
     
     <!-- Structured Data for SEO -->
@@ -183,6 +181,17 @@
                 </div>
             </div>
         </section>
+
+        <!-- Anchor Navigation -->
+        <nav class="anchor-nav" aria-label="Page navigation">
+            <div class="container">
+                <ul class="anchor-nav-list">
+                    <li class="anchor-nav-item"><a href="#foundersHeading" class="anchor-nav-link">Founders</a></li>
+                    <li class="anchor-nav-item"><a href="#teamHeading" class="anchor-nav-link">Our Team</a></li>
+                    <li class="anchor-nav-item"><a href="#collaboratorsHeading" class="anchor-nav-link">Collaborators</a></li>
+                </ul>
+            </div>
+        </nav>
         
         <!-- Founders Section -->
         <section class="section-main" aria-labelledby="foundersHeading">
