Fix 3 bugs: remove duplicate noscript/font-loader tags, fix script loading order for footer-accordion

--- a/workshops.html
+++ b/workshops.html
@@ -798,7 +798,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/main.js" type="module" defer></script>
-    <script src="assets/js/footer-accordion.js" defer></script>
+    <script src="assets/js/footer-accordion.js" type="module" defer></script>
     <script src="assets/js/animations.js" type="module" defer></script>
     </body>
 </html>
