--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/main.js" type="module" defer></script>
-    <script src="assets/js/footer-accordion.js" defer></script>
+    <script src="assets/js/footer-accordion.js" type="module" defer></script>
     <script src="assets/js/copyright-year.js" type="module" defer></script>
     <script src="assets/js/video-optimization.js" type="module" defer></script>
     <script src="assets/js/cookie-consent.js" defer></script>
